# pds-data-api

./: .dockerignore  .gitignore  Dockerfile  MANIFEST.in  README.md  add_title_column.sql  alembic.ini  create_deployment.py  database.py  docker-compose.yml  init.sql  init_db.py  main.py  migrate_db.py  models.py  pds_data_backup.sql  pds_sync_service.py  pyproject.toml  requirements.txt  secrets.json.example  setup.py  start_prod.py  test_connection.py
alembic/: env.py
alembic/versions/: 930e876c9a5f_add_title_and_page_size_to_config_model.py  a2a1ae1a3ac1_add_sync_history_table.py  a983b14b9f72_add_is_primary_key_to_table_columns.py  add_title_to_pdstables.py  fix_page_size_column.py
deployment/: README.md
deployment/config/: docker-compose.prod.yml
deployment/scripts/: deploy.sh
migrations/: add_primary_key_column.sql
migrations/versions/: add_qdrant_batch_size.py
src/pds_data_api/: __init__.py  config.py  config_loader.py  connection_handlers.py  database.py  init_db.py  main.py  models.py  pds_sync_service.py  qdrant_client.py  qdrant_routes.py  qdrant_service.py
src/pds_data_api/templates/: base.html  dashboard.html  sync_history.html
src/pds_data_api/templates/connections/: form.html  list.html
src/pds_data_api/templates/pds_tables/: column_form.html  columns.html  form.html  import_columns.html  list.html  (+3 more)
templates/: base.html  dashboard.html
templates/connections/: form.html  list.html
templates/pds_tables/: column_form.html  columns.html  form.html  list.html  payload.html  test_response.html
templates/table_columns/: list.html
(+3 files in other folders)
